[package]
name = "NetScan"
version = "0.0.1"
edition = "2021"

[dependencies]
async-std = "1.10"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-tls = "0.13.0"
async-h1 = "2.3.4"
http-types = "2.12"

[profile.release]
lto = true

[profile.dev]
incremental = true
