[package]
name = "NetScan"
version = "0.0.3"
edition = "2021"

[dependencies]
async-std = "1.10"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-tls = "0.13.0"
async-h1 = "2.3.4"
http-types = "2.12"
clap = { version = "4.5.28", features = ["derive"] }
log = "0.4"
env_logger = "0.11.6"

[profile.release]
lto = true

[profile.dev]
incremental = true
